Closed Bug 42362 Opened 25 years ago Closed 25 years ago

4 string assertions at startup

Categories

(Core :: Networking: Cookies, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: locka, Assigned: morse)

Details

Attachments

(1 file)

When I start Mozilla.exe, I get 4 string assertions. These are caused by cookie code that is extracting the first element from a string buffer class without checking whether the buffer is empty or not. The offending code is in nsCookie.cpp in permission_Load() at line 2305. Change the code to check for empty before performing the test.
Looks like scc already checked in a fix for this (version 1.74 on Jun 11 according to the log).
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
This bug is not fixed. Please reopen it. The fix checked in at 1.74 fixes cookie_Load, not permission_Load. This bug is about a similar problem in permisson_Load. I will attach a patch.
Yes, I see the problem. Of course you need to the description that a cookperm.txt file must already exist in order to get this assertion. That is, you need to have checked "remember this decision" when presented with the cookie nag box in a previous browser session. If you don't have a cookperm.txt file already, you will not get this assertion.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Fix checked in. Thanks Robert O'Callahan.
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Works for Me Platform: PC OS: Windows 98 Mozilla Version: 2000100508 Marking as Verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: