bug 42362, assertions at startup, coder=roc+moz@cs.cmu.edu, r=morse, a=morse+waterson(anticipated)